# TextIndex

./: .gitignore  LICENSE.md  README.md  example-concordance.tsv  example-converted.md  example.md  pyproject.toml  textindex-demo.py  textindex.css
example/: example.md  textindex-config.toml  textindex-demo.py  textindex.css
src/textindex/: __init__.py  config.py  renderer.py  textindex.py
tests/: conftest.py  test_config.py  test_renderer.py  test_text_index.py  test_text_index_advanced.py  test_textindex_entry.py
textindex/: textindex.py
