[project]
name = "textindex"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Michael Cummings", email = "mgcummings@yahoo.com" }
]
requires-python = ">=3.13.5"
dependencies = []

[project.scripts]
textindex = "textindex:main"

[build-system]
requires = ["uv_build>=0.9.1,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pylint>=3.3.9",
    "pylint-per-file-ignores>=2.0.3",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.0",
    "xdoctest>=1.3.0",
]
